Добавили новый класс в test_product_page с фикстурой setup, которая региструриует нового пользователя (перед каждым тестовым методом) + проверка в BasePage что юзер авторизован

--- a/automation/selenium-stepik-pageobject/pytest.ini
+++ b/automation/selenium-stepik-pageobject/pytest.ini
@@ -4,3 +4,4 @@ markers =
     regression: полный прогон для проверки старых багов
     api: тесты API
     login_guest: проверем формы логина и регистрации для незалогиненных юзеров
+    add_product_to_basket_authorized_user: под авторизованным юзером проверем добавление товара
