Добавил новую метку в тесты для ревью участниками курса Stepik

--- a/automation/selenium-stepik-pageobject/pytest.ini
+++ b/automation/selenium-stepik-pageobject/pytest.ini
@@ -5,3 +5,4 @@ markers =
     api: тесты API
     login_guest: проверем формы логина и регистрации для незалогиненных юзеров
     add_product_to_basket_authorized_user: под авторизованным юзером проверем добавление товара
+    need_review: метка для тестов пир-ревью (проверка учестниками курса Stepik)
